src/test/ui/reachable/expr_while.stderr
error: unreachable block in `while` expression
  --> $DIR/expr_while.rs:7:20
   |
LL |       while {return} {
   |  ____________________^
LL | |
LL | |         println!("Hello, world!");
LL | |     }
   | |_____^
   |
note: lint level defined here
  --> $DIR/expr_while.rs:4:9
   |
LL | #![deny(unreachable_code)]
   |         ^^^^^^^^^^^^^^^^
note: any code following this expression is unreachable
  --> $DIR/expr_while.rs:7:12
   |
LL |     while {return} {
   |            ^^^^^^

error: unreachable block in `while` expression
  --> $DIR/expr_while.rs:22:20
   |
LL |       while {return} {
   |  ____________________^
LL | |
LL | |         println!("I am dead.");
LL | |     }
   | |_____^
   |
note: any code following this expression is unreachable
  --> $DIR/expr_while.rs:22:12
   |
LL |     while {return} {
   |            ^^^^^^

error: aborting due to 2 previous errors

